# yacy-mcp

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml  test-and-build.yml
src/yacy_mcp/: __main__.py  server.py  test_client.py
tests/: test_yacy_mcp.py
